--- a/counter_strike/paginas/templates/index.html
+++ b/counter_strike/paginas/templates/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,29 +9,58 @@
         body {
             background-color: #2c3e50;
             color: #ecf0f1;
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            margin: 0;
+            overflow: hidden;
         }
         .container {
             text-align: center;
+            background: rgba(44, 62, 80, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+        }
+        h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
+            color: #e74c3c;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
         a {
+            display: block;
             color: #e74c3c;
             text-decoration: none;
             font-size: 1.5em;
+            margin: 10px 0;
+            transition: color 0.3s, transform 0.3s;
         }
         a:hover {
             color: #c0392b;
+            transform: scale(1.1);
+        }
+        .background-animation {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('{% static "portada.jpg" %}') no-repeat center center/cover;
+            z-index: -1;
+            filter: blur(5px);
+            opacity: 0.7;
         }
     </style>
 </head>
 <body>
+    <div class="background-animation"></div>
     <div class="container">
-        <h1>Bienvenido a la Predicción de Kills</h1>
-        <a href="{% url 'predecir_kill' %}">Ir a la Predicción</a>
+        <h1>Predicciones CS GO 1.6</h1>
+        <a href="{% url 'predecir_kill' %}">Cantidad de kills por partida</a>
+        <a href="{% url 'predecir_rondas_sobrevividas' %}">Probabilidad de Sobrevivir</a>
     </div>
 </body>
 </html>
